--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,7 +39,16 @@
 
   <body class="mb-5 pb-5">
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">Company name</a>
+      <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="http://mongobudget.herokuapp.com">
+      <span class="text-success text-lg text-ubu mr-0">
+      MongoBudget
+      </span>
+
+      <span class="fa-stack fa-2x ml-0">
+        <i class="fab fa-themeco fa-stack-2x text-success"></i>
+        <i class="fas fa-dollar-sign fa-stack-2x text-dark"></i>
+    </span>
+      </a>
       <button class="navbar-toggler position-absolute d-md-none collapsed" type="button"
         data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu"
         aria-expanded="false" aria-label="Toggle navigation">
@@ -138,8 +147,10 @@
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
           <div
-            class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">Dashboard</h1>
+            class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom border-success">
+            <h2 class="text-ubu text-success">
+              <i class="fas fa-tachometer-alt"></i>
+              Dashboard</h1>
             <div class="btn-toolbar mb-2 mb-md-0">
               <div class="btn-group mr-2">
                 <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
