add transaction type to models

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -32,6 +32,7 @@
         <tr>
           <td>{{ d.name}} </td>
           <td>{{ d.value}} </td>
+          <td>{{ d.type}} </td>
           <td>{{format_date d.date}} </td>
         </tr>
         {{/each}}
