--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -18,21 +18,24 @@
 <div class="collapse show" id="tbl">
   <div class="table-responsive">
     <table class="table table-striped table-sm table-hover table-inverse table-borderless">
-      <thead>
+      <thead class="text-lg">
         <tr>
-          {{#each keys as |k|}}
-          <th>
-            {{k}}
-          </th>
-          {{/each}}
+          <th> +/- </th>
+          <th> Description</th>
+          <th> Amount</th>
+          <th> Category</th>
+          <th> Date</th>
         </tr>
       </thead>
       <tbody>
         {{#each data as |d|}}
         <tr>
-          <td>{{ d.name}} </td>
-          <td>{{ d.value}} </td>
-          <td>{{ d.type}} </td>
+          <td class="text-success text-lg my-0 py-1">
+            <i class="fas fa-{{ d.icon }}"></i>
+          </td>
+          <td>{{ d.description}} </td>
+          <td class="font-weight-bold">{{format_amount d.amount}} </td>
+          <td>{{ d.category}} </td>
           <td>{{format_date d.date}} </td>
         </tr>
         {{/each}}
