--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -50,8 +50,9 @@
         <select class="form-control form-control-dark form-control-lg text-xl text-secondary ml-1" name="category">
           <option selected hidden> Category </option>
           <option>in</option>
-          <option>ou</option>
+          <option>out</option>
         </select>
+        
         <ul class="navbar-nav px-0">
           <li class="nav-item text-nowrap">
             <input class="btn btn-outline-success btn-block btn-lg" type="submit" value="Add">
