--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,9 @@
     <meta name="Description"
       content="budget tracker app with mongo DB, object storage, express, express-handlebars and bootstrap dashboard example" />
     <meta name="author" content="attila5287">
+    <link rel="icon" type="image/x-icon" class="favicon"
+    href="https://raw.githubusercontent.com/attila5287/mongobudget/main/blog_b.ico" />
+
     <meta name="generator" content="Jekyll v4.0.1">
     <title>Mongo Budget</title>
     <link rel="stylesheet"
