--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,25 +1,23 @@
-<div
-  class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom border-success">
-  <h2 class="text-ubu text-success">
-    <i class="fas fa-table"></i>
-    Table</h2>
-  <div class="btn-toolbar mb-2 mb-md-0">
-    <div class="btn-group mr-2">
-      <button id="coll_tabl_button" class="btn btn-outline-success px-5 rounded-xl"
-        type="button" data-toggle="collapse" data-target="#tbl" aria-expanded="false"
-        aria-controls="tbl">
-        <i id="coll_tabl_icon" class="fas fa-chevron-down pr-2" aria-hidden="true"></i>
-        Show/Hide
-      </button>
-    </div>
-  </div>
-</div>
+          <div
+            class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom border-success">
+            <h2 class="text-ubu text-success">
+              <i class="fas fa-table"></i>
+              Table</h2>
+            <div class="btn-toolbar mb-2 mb-md-0">
+              <div class="btn-group mr-2">
+                <button id="coll_tabl_button" class="btn btn-outline-success px-5 rounded-xl" type="button" data-toggle="collapse" data-target="#tbl"
+                  aria-expanded="false" aria-controls="tbl">
+                  <i id="coll_tabl_icon" class="fas fa-chevron-down pr-2" aria-hidden="true"></i>
+                  Show/Hide
+                </button>
+              </div>
+            </div>
+          </div>
 
 
 <div class="collapse show" id="tbl">
   <div class="table-responsive">
-    <table
-      class="table table-striped table-sm table-hover table-inverse table-borderless">
+    <table class="table table-striped table-sm table-hover table-inverse table-borderless">
       <thead class="text-lg">
         <tr>
           <th> +/- </th>
