--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -72,9 +72,9 @@
           <div class="sidebar-sticky pt-3">
             <ul class="nav flex-column text-ubu">
               <li class="nav-item">
-                <a class="nav-link active" href="/">
-                  <i class="fas fa-home text-2xl fa-fw"></i>
-                  Dashboard <span class="sr-only">(current)</span>
+                <a class="nav-link text-success" href="/">
+                  <i class="fas fa-tachometer-alt text-2xl fa-fw"></i>
+                  Dashboard
                 </a>
               </li>
               <li class="nav-item">
@@ -120,8 +120,8 @@
           <div
             class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom border-success">
             <h2 class="text-ubu text-success">
-              <i class="fas fa-tachometer-alt"></i>
-              Dashboard</h1>
+              <i class="fas fa-chart-bar"></i>
+              Chart</h1>
               <div class="btn-toolbar mb-2 mb-md-0">
                 <div class="btn-group mr-2">
                   <button id="coll_chrt_button" class="btn btn-outline-success px-5 rounded-xl"
