--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -138,6 +138,17 @@
 
           </div>
 
+          <h6 class="text-center text-ubu justify-content-center d-flex align-items-center">
+            <span class="text-xl pr-2">
+            &reg;
+            </span>
+             budget tracker with mongo db  ,
+             <span class="text-success pl-2">
+             a node.js app
+             </span>
+            <i class="fab fa-node-js text-success text-xl pl-2"></i>
+          </h6>
+
           {{{body}}}
 
         </main>
