--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -139,14 +139,21 @@
           </div>
 
           <h6 class="text-center text-ubu justify-content-center d-flex align-items-center">
-            <span class="text-xl pr-2">
+            <span class="text-xl pr-1">
             &reg;
             </span>
              budget tracker with mongo db  ,
              <span class="text-success pl-2">
              a node.js app
              </span>
-            <i class="fab fa-node-js text-success text-xl pl-2"></i>
+            <i class="fab fa-node-js text-success text-xl pl-1 pr-2"></i>
+              by   
+             <a class="text-info pl-2" href="https://github.com/attila5287/mongobudget">
+            <i class="fab fa-github-alt text-lg">
+            </i>
+              attila5287
+             </a>
+
           </h6>
 
           {{{body}}}
