--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,14 +30,13 @@
     <form action="/api/transaction" method="post">
       <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
         <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="http://mongobudget.herokuapp.com">
-          <span class="text-success text-lg text-ubu mr-0">
-            MongoBudget
+          <span class="text-success text-reg mr-0 text-ubu text-lg">
+            Mongo
+            <span class="shadow-lg text-dark font-weight-bold bg-success p-1 px-0 rounded-xl">Budget</span>
+            <span class="text-success">Tracker</span>
           </span>
-
-          <span class="fa-stack fa-2x ml-0">
-            <i class="fab fa-themeco fa-stack-2x text-success"></i>
-            <i class="fas fa-dollar-sign fa-stack-2x text-dark"></i>
-          </span>
+          <img src="https://raw.githubusercontent.com/attila5287/mongobudget/main/budget.png"
+                    class="img-mini bg-transparent rounded-up" alt="dev-img">
         </a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button"
           data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu"
