--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -35,7 +35,7 @@
     <input type="text" class="col-8 form-control form-control-dark text-secondary" name="description"
       value="{{d.description}}">
   </div>
-  <div class="form-group row d-none">
+  <div class="form-group row">
     <label class="col-3 uplabel" for="amount">Amount</label>
     <input type="text" class="col-8 form-control form-control-dark text-secondary" name="amount" value="{{d.amount}}">
   </div>
@@ -59,7 +59,7 @@
 <div class="collapse show" id="tbl">
   <div class="table-responsive">
     <table class="table table-striped table-sm table-hover table-inverse table-borderless">
-      <thead class="text-lg border-bottom border-info text-info">
+      <thead class="text-lg border-bottom border-info text-info text-ubu">
         <tr>
           <th> +/- </th>
           <th> Description</th>
