--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -50,7 +50,7 @@
         <input class="form-control form-control-dark form-control-lg text-xl w-100 ml-1" name="amount" type="text"
           placeholder="Amount">
 
-        <select class="form-control form-control-dark form-control-lg text-xl text-secondary ml-1" name="category">
+        <select class="custom-select custom-select-lg form-control form-control-dark form-control-lg text-xl text-secondary ml-1" name="category">
           <option selected hidden> Category </option>
           <option>in</option>
           <option>out</option>
@@ -91,14 +91,16 @@
               </li>
             </ul>
             <ul class="nav flex-column text-ubu p-4">
-              <p class="my-0 text-center text-muted font-weight-bold opac-50 font-italic">powered by...</p>
+              <p class="animated bounce my-0 text-center text-muted font-weight-bold opac-50 font-italic">powered by...</p>
               <h1
-                class="title animated infinite heartBeat mr-4 fab fa-node text-success text-center mb-0">
+                class="title animated infinite heartBeat delay-5s mr-4 fab fa-node text-success text-center mb-0">
               </h1>
               <p class="mt-0 border-bottom border-secondary"></p>
-              <p class="animated bounceInLeft">
-                <i class="fa fa-cog text-xl fa-spin" aria-hidden="true"></i>
-                A node-js full-stack app that tracks transactions and stores them in database.</p>
+              <p class="animated bounceInLeft font-italic">
+                <i class="fas fa-cog text-lg fa-spin" aria-hidden="true"></i>
+                <i class="fas fa-cog text-2xl fa-pulse text-success" aria-hidden="true"></i>
+                <i class="fas fa-sun text-lg fa-spin" aria-hidden="true"></i>
+                A full-stack budget-tracker app that collects transactions by user and stores them in database</p>
               <p class="my-3 animated zoomIn delay-1s text-muted font-italic"> <i
                   class="mr-0 fab fa-npm text-2xl fa-fw text-danger"></i> packages and libraries:</p>
               <p class="my-3 animated bounceInLeft delay-1s"> <i
