--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
     <!-- Custom styles for this template -->
   </head>
 
-  <body class="my-5 py-4">
+  <body class="py-2">
     
     <form action="/api/transaction" method="post">
       <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
@@ -38,6 +38,7 @@
           <img src="https://raw.githubusercontent.com/attila5287/mongobudget/main/budget.png"
                     class="img-mini bg-transparent rounded-up" alt="dev-img">
         </a>
+        
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button"
           data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu"
           aria-expanded="false" aria-label="Toggle navigation">
@@ -61,6 +62,7 @@
             <input class="btn btn-outline-success btn-block btn-lg" type="submit" value="Add">
           </li>
         </ul>
+        
       </nav>
     </form>
     
@@ -68,8 +70,8 @@
       <div class="row">
         
         <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-dark sidebar collapse">
-          <div class="sidebar-sticky pt-3">
-            <ul class="nav flex-column text-ubu">
+          <div class="sidebar-sticky pt-5 mt-4">
+            <ul class="nav flex-column text-ubu pt-5">
               <li class="nav-item">
                 <a class="nav-link text-success" href="/">
                   <i class="fas fa-tachometer-alt text-2xl fa-fw"></i>
@@ -116,8 +118,7 @@
             </ul>
           </div>
         </nav>
-
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4 pt-5 mt-5">
           <div
             class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom border-success">
             <h2 class="text-ubu text-success">
