responsive view top fized

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
     <!-- Custom styles for this template -->
   </head>
 
-  <body class="py-2">
+  <body class="my-5 py-5 my-sm-0 py-sm-0">
     
     <form action="/api/transaction" method="post">
       <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
@@ -45,13 +45,13 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         
-        <input class="form-control form-control-dark form-control-lg text-xl w-100 ml-1" name="description" type="text"
+        <input class="form-control form-control-dark text-xl w-100 ml-1" name="description" type="text"
           placeholder="Description">
         
-        <input class="form-control form-control-dark form-control-lg text-xl w-100 ml-1" name="amount" type="text"
+        <input class="form-control form-control-dark text-xl w-100 ml-1" name="amount" type="text"
           placeholder="Amount">
 
-        <select class="custom-select custom-select-lg form-control form-control-dark form-control-lg text-xl text-secondary ml-1" name="category">
+        <select class="custom-select custom-select-lg form-control form-control-dark text-xl text-secondary ml-1" name="category">
           <option selected hidden> Category </option>
           <option>in</option>
           <option>out</option>
@@ -69,8 +69,8 @@
     <div class="container-fluid">
       <div class="row">
         
-        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-dark sidebar collapse">
-          <div class="sidebar-sticky pt-5 mt-4">
+        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-dark sidebar collapse mt-5 pt-5 mt-sm-2 pt-sm-2">
+          <div class="sidebar-sticky mt-5 pt-5 mt-sm-2 pt-sm-2">
             <ul class="nav flex-column text-ubu pt-5">
               <li class="nav-item">
                 <a class="nav-link text-success" href="/">
@@ -120,8 +120,8 @@
         </nav>
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4 pt-5 mt-5">
           <div
-            class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom border-success">
-            <h2 class="text-ubu text-success">
+            class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-5 pt-sm-2 pb-2  mt-5 mt-sm-2 mb-3 border-bottom border-success">
+            <h2 class="text-ubu text-success mt-5 pt-5 mt-sm-2 pt-sm-2">
               <i class="fas fa-chart-bar"></i>
               Chart</h1>
               <div class="btn-toolbar mb-2 mb-md-0">
