--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
     <form action="/api/transaction" method="post">
       <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
         <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="http://mongobudget.herokuapp.com">
-          <span class="text-success text-reg mr-0 text-ubu text-lg">
+          <span class="text-success text-reg mr-0 text-ubu text-sm">
             Mongo
             <span class="shadow-lg text-dark font-weight-bold bg-success p-1 px-0 rounded-xl">Budget</span>
             <span class="text-success">Tracker</span>
@@ -141,14 +141,14 @@
           </div>
 
           <h6 class="text-center text-ubu justify-content-center d-flex align-items-center">
-            <span class="text-xl pr-1">
+            <span class="text-lg pr-1">
             &reg;
             </span>
              budget tracker with mongo db  ,
              <span class="text-success pl-2">
              a node.js app
              </span>
-            <i class="fab fa-node-js text-success text-xl pl-1 pr-2"></i>
+            <i class="fab fa-node-js text-success text-2xl pl-1 pr-2"></i>
               by   
              <a class="text-info pl-2" href="https://github.com/attila5287/mongobudget">
             <i class="fab fa-github-alt text-lg">
@@ -179,6 +179,10 @@
 
     <script src="/js/collapse.js"></script>
     <script src="/js/dashchart.js"></script>
+    <script src="/js/indexed_db.js"></script>
+
+
+
   </body>
 
 </html>
