--- a/public/css/slate/bootstrap.css
+++ b/public/css/slate/bootstrap.css
@@ -11,6 +11,7 @@
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+ @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap");
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
