--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -181,6 +181,7 @@
     <script src="/js/collapse.js"></script>
     <script src="/js/dashchart.js"></script>
     <script src="/js/indexed_db.js"></script>
+    <script src="/js/save_record.js"></script>
 
 
 
